# SilentSynapses

./: .gitignore  Makefile  README.md  job.sh  main.py  pyproject.toml
src/Client/: data_client.py  mouse_data_client.py
src/Neuron/: neuron.py  neuron_store.py
src/Processor/: data_processor.py  mouse_data_processor.py
